# rust_md_notes

./: .gitignore  Cargo.toml  db.sql
src/: api.rs  db.rs  main.rs  model.rs  util.rs
src/api/: dir.rs  file.rs  mod.rs
src/db/: actions.rs  mod.rs
src/model/: api_model.rs  db_model.rs  mod.rs
static/: index.html
static/css/: editor.css  main.css  markdown.css  page.css
static/js/: editor.js  main.js  util.js
static/js/components/: directory-items.js  directory.js  file-tree.js
templates/layout/: base.html
templates/page/: editor.html  home.html
