[package]
name = "markdown_editor"
version = "0.1.0"
authors = ["jacobalbright <jacob.albright23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
actix-files = "0.2.2"
rusqlite = "0.23.1"

tera = "1.4.0"
comrak = "0.8.0"

serde = { version = "1.0.114", features = ["derive"] }